@@ -1,14 +1,21 @@
 package de.muenchen.dave.spring.services;
 
+import co.elastic.clients.elasticsearch.ElasticsearchClient;
+import co.elastic.clients.elasticsearch.core.SearchRequest;
+import co.elastic.clients.elasticsearch.core.SearchResponse;
 import com.google.common.collect.Lists;
 import de.muenchen.dave.DaveBackendApplication;
 import de.muenchen.dave.configuration.CachingConfiguration;
+import de.muenchen.dave.domain.dtos.ErhebungsstelleKarteDTO;
 import de.muenchen.dave.domain.dtos.ZaehlartenKarteDTO;
 import de.muenchen.dave.domain.dtos.ZaehlstelleKarteDTO;
 import de.muenchen.dave.domain.dtos.suche.SucheComplexSuggestsDTO;
+import de.muenchen.dave.domain.elasticsearch.CustomSuggest;
 import de.muenchen.dave.domain.elasticsearch.Zaehlstelle;
 import de.muenchen.dave.domain.elasticsearch.Zaehlung;
 import de.muenchen.dave.domain.enums.Status;
+import de.muenchen.dave.repositories.elasticsearch.CustomSuggestIndex;
+import de.muenchen.dave.repositories.elasticsearch.MessstelleIndex;
 import de.muenchen.dave.repositories.elasticsearch.ZaehlstelleIndex;
 import de.muenchen.dave.services.SucheService;
 import lombok.extern.slf4j.Slf4j;
@@ -16,16 +23,19 @@ import org.hamcrest.Matchers;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.cache.CacheManager;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
+import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
 import org.springframework.data.elasticsearch.core.geo.GeoPoint;
+import org.springframework.data.elasticsearch.core.mapping.IndexCoordinates;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
+import java.io.IOException;
 import java.time.LocalDate;
-import java.util.Arrays;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
@@ -42,45 +52,63 @@ import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
 
-@SpringBootTest(classes = { DaveBackendApplication.class }, webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT, properties = {
-        "spring.datasource.url=jdbc:h2:mem:dave;DB_CLOSE_ON_EXIT=FALSE",
-        "refarch.gracefulshutdown.pre-wait-seconds=0" })
+@SpringBootTest(
+        classes = { DaveBackendApplication.class }, webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT, properties = {
+                "spring.datasource.url=jdbc:h2:mem:dave;DB_CLOSE_ON_EXIT=FALSE" }
+)
 @ActiveProfiles(profiles = { SPRING_TEST_PROFILE, SPRING_NO_SECURITY_PROFILE })
 @Slf4j
 public class SucheServiceSpringTests {
 
-    @MockBean
-    ZaehlstelleIndex repo;
-
     @Autowired
     SucheService service;
-
     @Autowired
     CacheManager cacheManager;
+    @MockitoBean
+    private MessstelleIndex messstelleIndex;
+    @MockitoBean
+    private CustomSuggestIndex customSuggestIndex;
+    @MockitoBean
+    private ZaehlstelleIndex zaehlstelleIndex;
+    @MockitoBean
+    private ElasticsearchOperations elasticsearchOperations;
+    @MockitoBean
+    private ElasticsearchClient elasticsearchClient;
 
     @Test
     @WithMockUser(roles = { "FACHADMIN" })
-    public void testComplexSuggest() {
+    public void testComplexSuggest() throws IOException {
 
-        Page<Zaehlstelle> resultComplexSuggest = new PageImpl<>(Arrays.asList(
+        Page<Zaehlstelle> resultComplexSuggest = new PageImpl<>(List.of(
                 this.createSampleData().get(0),
                 this.createSampleData().get(4)));
-        when(repo.suggestSearch(any(), any())).thenReturn(resultComplexSuggest);
+        when(zaehlstelleIndex.suggestSearch(any(), any())).thenReturn(resultComplexSuggest);
+        when(elasticsearchOperations.getIndexCoordinatesFor(CustomSuggest.class)).thenReturn(IndexCoordinates.of("the-index"));
+        when(elasticsearchClient.search(any(SearchRequest.class), eq(CustomSuggest.class)))
+                .thenReturn(SearchResponse.of(
+                        builder -> builder
+                                .suggest(new HashMap<>())
+                                .took(200)
+                                .timedOut(false)
+                                .shards(shardsBuilder -> shardsBuilder.failed(0).successful(1).total(1).failures(List.of()))
+                                .hits(hitsBuilder -> hitsBuilder.hits(List.of()))));
+        when(messstelleIndex.suggestSearch(any(), any())).thenReturn(new PageImpl<>(List.of()));
 
-        SucheComplexSuggestsDTO dto1 = this.service.complexSuggest("Moo", false);
+        SucheComplexSuggestsDTO dto1 = this.service.getComplexSuggest("Moo", false);
         assertThat(dto1.getZaehlstellenSuggests(), is(not(empty())));
         assertThat(dto1.getZaehlstellenSuggests(), containsInAnyOrder(
                 Matchers.hasProperty("id", is("01"))));
 
-        resultComplexSuggest = new PageImpl<>(Arrays.asList(
+        resultComplexSuggest = new PageImpl<>(List.of(
                 this.createSampleData().get(0),
                 this.createSampleData().get(2),
                 this.createSampleData().get(3)));
-        when(repo.suggestSearch(any(), any())).thenReturn(resultComplexSuggest);
+        when(zaehlstelleIndex.suggestSearch(any(), any())).thenReturn(resultComplexSuggest);
 
-        SucheComplexSuggestsDTO dto2 = this.service.complexSuggest("7.", false);
+        SucheComplexSuggestsDTO dto2 = this.service.getComplexSuggest("7.", false);
         assertThat(dto2.getZaehlstellenSuggests(), is(not(empty())));
         assertThat(dto2.getZaehlstellenSuggests(), containsInAnyOrder(
                 Matchers.hasProperty("id", is("01")),
@@ -89,11 +117,10 @@ public class SucheServiceSpringTests {
         assertThat(dto2.getZaehlungenSuggests(), is(not(empty())));
         assertThat(dto2.getZaehlungenSuggests().size(), is(equalTo(3)));
 
-        resultComplexSuggest = new PageImpl<>(Arrays.asList(
-                this.createSampleData().get(2)));
-        when(repo.suggestSearch(any(), any())).thenReturn(resultComplexSuggest);
+        resultComplexSuggest = new PageImpl<>(List.of(this.createSampleData().get(2)));
+        when(zaehlstelleIndex.suggestSearch(any(), any())).thenReturn(resultComplexSuggest);
 
-        SucheComplexSuggestsDTO dto3 = this.service.complexSuggest("7. Fo", false);
+        SucheComplexSuggestsDTO dto3 = this.service.getComplexSuggest("7. Fo", false);
         assertThat(dto3.getZaehlstellenSuggests(), is(not(empty())));
         assertThat(dto3.getZaehlstellenSuggests(), containsInAnyOrder(
                 Matchers.hasProperty("id", is("03"))));
@@ -101,11 +128,11 @@ public class SucheServiceSpringTests {
         assertThat(dto3.getZaehlungenSuggests(), containsInAnyOrder(
                 Matchers.hasProperty("text", is("07.02.2008 Foop"))));
 
-        resultComplexSuggest = new PageImpl<>(Arrays.asList(
+        resultComplexSuggest = new PageImpl<>(List.of(
                 this.createSampleData().get(3)));
-        when(repo.suggestSearch(any(), any())).thenReturn(resultComplexSuggest);
+        when(zaehlstelleIndex.suggestSearch(any(), any())).thenReturn(resultComplexSuggest);
 
-        SucheComplexSuggestsDTO dto5 = this.service.complexSuggest("13.11 Ga", false);
+        SucheComplexSuggestsDTO dto5 = this.service.getComplexSuggest("13.11 Ga", false);
         assertThat(dto5.getZaehlstellenSuggests(), is(not(empty())));
         assertThat(dto5.getZaehlungenSuggests(), is(not(empty())));
         assertThat(dto5.getZaehlungenSuggests(), containsInAnyOrder(
@@ -117,61 +144,63 @@ public class SucheServiceSpringTests {
     @WithMockUser(roles = { "FACHADMIN" })
     public void testSucheZaehlstelleWithSonderzaehlungen() {
 
-        Objects.requireNonNull(cacheManager.getCache(CachingConfiguration.SUCHE_ZAEHLSTELLE)).clear();
-        Objects.requireNonNull(cacheManager.getCache(CachingConfiguration.SUCHE_ZAEHLSTELLE_DATENPORTAL)).clear();
+        Objects.requireNonNull(cacheManager.getCache(CachingConfiguration.SUCHE_ERHEBUNGSSTELLE)).clear();
+        Objects.requireNonNull(cacheManager.getCache(CachingConfiguration.SUCHE_ERHEBUNGSSTELLE_DATENPORTAL)).clear();
 
-        Page<Zaehlstelle> resultComplexSuggest = new PageImpl<>(Arrays.asList(
-                this.createSampleData().get(0)));
-        when(repo.suggestSearch(any(), any())).thenReturn(resultComplexSuggest);
+        Page<Zaehlstelle> resultComplexSuggest = new PageImpl<>(List.of(this.createSampleData().get(0)));
+        when(zaehlstelleIndex.suggestSearch(any(), any())).thenReturn(resultComplexSuggest);
+        when(messstelleIndex.suggestSearch(any(), any())).thenReturn(new PageImpl<>(List.of()));
 
-        final Set<ZaehlstelleKarteDTO> zaehlstelleKarteDTOS = this.service.sucheZaehlstelle("Z01", false);
-        assertThat(zaehlstelleKarteDTOS, is(notNullValue()));
-        assertThat(zaehlstelleKarteDTOS.isEmpty(), is(false));
-        assertThat(zaehlstelleKarteDTOS.size(), is(1));
-        assertThat(zaehlstelleKarteDTOS.stream().findFirst().get().getLatitude(), is(equalTo(1.0)));
-        assertThat(zaehlstelleKarteDTOS.stream().findFirst().get().getLongitude(), is(equalTo(1.0)));
+        final Set<ErhebungsstelleKarteDTO> erhebungsstelleKarteDTOS = this.service.sucheErhebungsstelle("Z01", false);
+        assertThat(erhebungsstelleKarteDTOS, is(notNullValue()));
+        assertThat(erhebungsstelleKarteDTOS.isEmpty(), is(false));
+        assertThat(erhebungsstelleKarteDTOS.size(), is(1));
+        assertThat(erhebungsstelleKarteDTOS.stream().findFirst().get().getLatitude(), is(equalTo(1.0)));
+        assertThat(erhebungsstelleKarteDTOS.stream().findFirst().get().getLongitude(), is(equalTo(1.0)));
 
         Set<ZaehlartenKarteDTO> expected = new HashSet<>();
         ZaehlartenKarteDTO zaehlartKarte = new ZaehlartenKarteDTO();
-        zaehlartKarte.setZaehlarten(new TreeSet<>(Arrays.asList("Q")));
+        zaehlartKarte.setZaehlarten(new TreeSet<>(List.of("Q")));
         zaehlartKarte.setLatitude(1.0);
         zaehlartKarte.setLongitude(1.0);
         expected.add(zaehlartKarte);
         zaehlartKarte = new ZaehlartenKarteDTO();
-        zaehlartKarte.setZaehlarten(new TreeSet<>(Arrays.asList("Q_")));
+        zaehlartKarte.setZaehlarten(new TreeSet<>(List.of("Q_")));
         zaehlartKarte.setLatitude(1.0);
         zaehlartKarte.setLongitude(2.0);
         expected.add(zaehlartKarte);
 
-        assertThat(zaehlstelleKarteDTOS.stream().findFirst().get().getZaehlartenKarte(), is(expected));
+        assertThat(erhebungsstelleKarteDTOS.stream().filter(stelle -> stelle instanceof ZaehlstelleKarteDTO).map(ZaehlstelleKarteDTO.class::cast).findFirst()
+                .get().getZaehlartenKarte(), is(expected));
     }
 
     @Test
     @WithMockUser(roles = { "ANWENDER" })
     public void testSucheZaehlstelleWithoutSonderzaehlungen() {
 
-        Objects.requireNonNull(cacheManager.getCache(CachingConfiguration.SUCHE_ZAEHLSTELLE)).clear();
-        Objects.requireNonNull(cacheManager.getCache(CachingConfiguration.SUCHE_ZAEHLSTELLE_DATENPORTAL)).clear();
+        Objects.requireNonNull(cacheManager.getCache(CachingConfiguration.SUCHE_ERHEBUNGSSTELLE)).clear();
+        Objects.requireNonNull(cacheManager.getCache(CachingConfiguration.SUCHE_ERHEBUNGSSTELLE_DATENPORTAL)).clear();
 
-        Page<Zaehlstelle> resultComplexSuggest = new PageImpl<>(Arrays.asList(
-                this.createSampleData().get(0)));
-        when(repo.suggestSearch(any(), any())).thenReturn(resultComplexSuggest);
+        Page<Zaehlstelle> resultComplexSuggest = new PageImpl<>(List.of(this.createSampleData().get(0)));
+        when(zaehlstelleIndex.suggestSearch(any(), any())).thenReturn(resultComplexSuggest);
+        when(messstelleIndex.suggestSearch(any(), any())).thenReturn(new PageImpl<>(List.of()));
 
-        final Set<ZaehlstelleKarteDTO> zaehlstelleKarteDTOS = this.service.sucheZaehlstelle("Z01", false);
-        assertThat(zaehlstelleKarteDTOS, is(notNullValue()));
-        assertThat(zaehlstelleKarteDTOS.isEmpty(), is(false));
-        assertThat(zaehlstelleKarteDTOS.size(), is(1));
-        assertThat(zaehlstelleKarteDTOS.stream().findFirst().get().getLatitude(), is(equalTo(1.0)));
-        assertThat(zaehlstelleKarteDTOS.stream().findFirst().get().getLongitude(), is(equalTo(1.0)));
+        final Set<ErhebungsstelleKarteDTO> erhebungsstelleKarteDTOS = this.service.sucheErhebungsstelle("Z01", false);
+        assertThat(erhebungsstelleKarteDTOS, is(notNullValue()));
+        assertThat(erhebungsstelleKarteDTOS.isEmpty(), is(false));
+        assertThat(erhebungsstelleKarteDTOS.size(), is(1));
+        assertThat(erhebungsstelleKarteDTOS.stream().findFirst().get().getLatitude(), is(equalTo(1.0)));
+        assertThat(erhebungsstelleKarteDTOS.stream().findFirst().get().getLongitude(), is(equalTo(1.0)));
 
         Set<ZaehlartenKarteDTO> expected = new HashSet<>();
         ZaehlartenKarteDTO zaehlartKarte = new ZaehlartenKarteDTO();
-        zaehlartKarte.setZaehlarten(new TreeSet<>(Arrays.asList("Q_")));
+        zaehlartKarte.setZaehlarten(new TreeSet<>(List.of("Q_")));
         zaehlartKarte.setLatitude(1.0);
         zaehlartKarte.setLongitude(2.0);
         expected.add(zaehlartKarte);
 
-        assertThat(zaehlstelleKarteDTOS.stream().findFirst().get().getZaehlartenKarte(), is(expected));
+        assertThat(erhebungsstelleKarteDTOS.stream().filter(stelle -> stelle instanceof ZaehlstelleKarteDTO).map(ZaehlstelleKarteDTO.class::cast).findFirst()
+                .get().getZaehlartenKarte(), is(expected));
     }
 
     private List<Zaehlstelle> createSampleData() {
@@ -190,7 +219,7 @@ public class SucheServiceSpringTests {
         z1_1.setPunkt(new GeoPoint(1, 1));
         z1_1.setSonderzaehlung(true);
         z1_1.setStatus(Status.ACTIVE.name());
-        z1_1.setSuchwoerter(Arrays.asList("Moosach", "Projektz11"));
+        z1_1.setSuchwoerter(List.of("Moosach", "Projektz11"));
 
         Zaehlung z1_2 = new Zaehlung();
         z1_2.setId("1_2");
@@ -200,7 +229,7 @@ public class SucheServiceSpringTests {
         z1_2.setPunkt(new GeoPoint(1, 2));
         z1_2.setSonderzaehlung(false);
         z1_2.setStatus(Status.ACTIVE.name());
-        z1_2.setSuchwoerter(Arrays.asList("Moosach", "Projektz12"));
+        z1_2.setSuchwoerter(List.of("Moosach", "Projektz12"));
 
         z1.setZaehlungen(Lists.newArrayList(z1_1, z1_2));
 
@@ -219,7 +248,7 @@ public class SucheServiceSpringTests {
         z2_1.setPunkt(new GeoPoint(2, 1));
         z2_1.setSonderzaehlung(false);
         z2_1.setStatus(Status.ACTIVE.name());
-        z2_1.setSuchwoerter(Arrays.asList("Sendling", "Projektz21"));
+        z2_1.setSuchwoerter(List.of("Sendling", "Projektz21"));
 
         z2.setZaehlungen(Lists.newArrayList(z2_1));
 
@@ -238,7 +267,7 @@ public class SucheServiceSpringTests {
         z3_1.setPunkt(new GeoPoint(3, 1));
         z3_1.setSonderzaehlung(false);
         z3_1.setStatus(Status.ACTIVE.name());
-        z3_1.setSuchwoerter(Arrays.asList("Schwabing", "Foop"));
+        z3_1.setSuchwoerter(List.of("Schwabing", "Foop"));
 
         Zaehlung z3_2 = new Zaehlung();
         z3_2.setId("3_2");
@@ -248,7 +277,7 @@ public class SucheServiceSpringTests {
         z3_2.setPunkt(new GeoPoint(3, 2));
         z3_2.setSonderzaehlung(false);
         z3_2.setStatus(Status.ACTIVE.name());
-        z3_2.setSuchwoerter(Arrays.asList("Schwabing", "Projektz32"));
+        z3_2.setSuchwoerter(List.of("Schwabing", "Projektz32"));
 
         z3.setZaehlungen(Lists.newArrayList(z3_1, z3_2));
 
@@ -267,7 +296,7 @@ public class SucheServiceSpringTests {
         z4_1.setPunkt(new GeoPoint(4, 1));
         z4_1.setSonderzaehlung(false);
         z4_1.setStatus(Status.ACTIVE.name());
-        z4_1.setSuchwoerter(Arrays.asList("Bogenhausen", "Hans"));
+        z4_1.setSuchwoerter(List.of("Bogenhausen", "Hans"));
 
         Zaehlung z4_2 = new Zaehlung();
         z4_2.setId("4_2");
@@ -277,7 +306,7 @@ public class SucheServiceSpringTests {
         z4_2.setPunkt(new GeoPoint(4, 2));
         z4_2.setSonderzaehlung(false);
         z4_2.setStatus(Status.ACTIVE.name());
-        z4_2.setSuchwoerter(Arrays.asList("Bogenhausen", "Petra"));
+        z4_2.setSuchwoerter(List.of("Bogenhausen", "Petra"));
 
         Zaehlung z4_3 = new Zaehlung();
         z4_3.setId("4_3");
@@ -287,7 +316,7 @@ public class SucheServiceSpringTests {
         z4_3.setPunkt(new GeoPoint(4, 3));
         z4_3.setSonderzaehlung(false);
         z4_3.setStatus(Status.ACTIVE.name());
-        z4_3.setSuchwoerter(Arrays.asList("Bogenhausen", "Gabi"));
+        z4_3.setSuchwoerter(List.of("Bogenhausen", "Gabi"));
 
         z4.setZaehlungen(Lists.newArrayList(z4_1, z4_2, z4_3));
 
