@@ -5,20 +5,23 @@ import de.muenchen.dave.domain.dtos.bearbeiten.UpdateStatusDTO;
 import de.muenchen.dave.domain.dtos.external.ExternalZaehlungDTO;
 import de.muenchen.dave.domain.elasticsearch.Zaehlstelle;
 import de.muenchen.dave.domain.elasticsearch.ZaehlstelleRandomFactory;
+import de.muenchen.dave.domain.elasticsearch.Zaehlung;
 import de.muenchen.dave.domain.elasticsearch.ZaehlungRandomFactory;
 import de.muenchen.dave.domain.enums.Status;
 import de.muenchen.dave.exceptions.BrokenInfrastructureException;
 import de.muenchen.dave.exceptions.DataNotFoundException;
 import de.muenchen.dave.exceptions.PlausibilityException;
+import de.muenchen.dave.repositories.elasticsearch.CustomSuggestIndex;
+import de.muenchen.dave.repositories.elasticsearch.MessstelleIndex;
 import de.muenchen.dave.repositories.elasticsearch.ZaehlstelleIndex;
 import de.muenchen.dave.services.persist.ExternalZaehlungPersistierungsService;
 import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.test.context.ActiveProfiles;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -33,18 +36,25 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.when;
 
-@SpringBootTest(classes = { DaveBackendApplication.class }, webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT, properties = {
-        "spring.datasource.url=jdbc:h2:mem:dave;DB_CLOSE_ON_EXIT=FALSE",
-        "refarch.gracefulshutdown.pre-wait-seconds=0" })
+@SpringBootTest(
+        classes = { DaveBackendApplication.class }, webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT, properties = {
+                "spring.datasource.url=jdbc:h2:mem:dave;DB_CLOSE_ON_EXIT=FALSE" }
+)
 @ActiveProfiles(profiles = { SPRING_TEST_PROFILE, SPRING_NO_SECURITY_PROFILE })
 @Slf4j
 class ExternalZaehlungPersistierungsServiceSpringTest {
 
+    @MockitoBean
+    private CustomSuggestIndex customSuggestIndex;
+
+    @MockitoBean
+    private MessstelleIndex messstelleIndex;
+
+    @MockitoBean
+    private ZaehlstelleIndex zaehlstelleIndex;
+
     @Autowired
     private ExternalZaehlungPersistierungsService externalZaehlungPersistierungsService;
-
-    @MockBean
-    private ZaehlstelleIndex zaehlstelleIndex;
 
     @Test
     public void getZaehlungenForExternal() throws BrokenInfrastructureException {
@@ -70,14 +80,14 @@ class ExternalZaehlungPersistierungsServiceSpringTest {
         zst = ZaehlstelleRandomFactory.getOne();
         zst.setNummer("120107");
         zst.setStadtbezirkNummer(12);
-        zst.setZaehlungen(Arrays.asList(ZaehlungRandomFactory.getOne()));
+        zst.setZaehlungen(List.of(ZaehlungRandomFactory.getOne()));
         zst.getZaehlungen().get(0).setStatus(Status.CORRECTION.name());
         indexResult.add(zst);
 
         zst = ZaehlstelleRandomFactory.getOne();
         zst.setNummer("120107");
         zst.setStadtbezirkNummer(12);
-        zst.setZaehlungen(Arrays.asList(ZaehlungRandomFactory.getOne()));
+        zst.setZaehlungen(List.of(ZaehlungRandomFactory.getOne()));
         zst.getZaehlungen().get(0).setStatus(Status.COUNTING.name());
         indexResult.add(zst);
 
@@ -96,7 +106,9 @@ class ExternalZaehlungPersistierungsServiceSpringTest {
         final Zaehlstelle zaehlstelle = ZaehlstelleRandomFactory.getOne();
         zaehlstelle.setNummer("120105");
         zaehlstelle.setStadtbezirkNummer(12);
-        zaehlstelle.setZaehlungen(Arrays.asList(ZaehlungRandomFactory.getOne()));
+        final var zaehlungen = new ArrayList<Zaehlung>();
+        zaehlungen.add(ZaehlungRandomFactory.getOne());
+        zaehlstelle.setZaehlungen(zaehlungen);
         zaehlstelle.getZaehlungen().get(0).setStatus(Status.INSTRUCTED.name());
 
         final UpdateStatusDTO updateStatusDTO = new UpdateStatusDTO();
